@@ -16,7 +16,10 @@ JUnit repository on GitHub.
 [[release-notes-5.11.4-junit-platform-bug-fixes]]
 ==== Bug Fixes
 
-* ❓
+* Escape whitespace characters (such as line breaks) in XML attribute values (such as
+  exception messages) in the legacy XML report generated by the Console Launcher. This
+  change ensures the resulting XML files can be processed by downstream tools while
+  preserving whitespace characters.
 
 [[release-notes-5.11.4-junit-platform-deprecations-and-breaking-changes]]
 ==== Deprecations and Breaking Changes
